src/com/organisms/Navigation/Navigation.scss
.nav {
  width: 108px;
  height: 730px;
  background-color: #222222;
  border-radius: 19px;
  display: grid;
  grid-template-rows: 124px 1fr;
  row-gap: 21px;
  position: absolute;
  z-index: 10;

  &.open {
    width: 430px;
  }

  &-header {
    display: flex;
  }

  &-search {
    flex-grow: 3;
    display: flex;
    justify-content: flex-start;
    align-items: center;

    input {
      background-color: #1f1f1f;
      margin: 0 26px 0 1px;
      height: 42px;
      border-radius: 21px;
      border: 1px solid #2b2b2b;
      color: white;
      font-size: 16px;
      padding-left: 21px;
    }
  }

  &-list {
    display: grid;
    grid-template-rows: repeat(5, 79px);
    row-gap: 44px;
  }

  &-item {
    display: flex;

    &__icon,
    &__icon-header {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-basis: 108px;
    }

    &__text {
      flex-grow: 3;
      display: flex;
      align-items: center;
      margin: 0 0 0 16px;
      font-family: 'Montserrat', sans-serif;
      font-size: 27px;
      color: white;
    }
  }
}

